@@ -1,5 +1,10 @@
 2010-02-16  Daniel Jacobowitz  <dan@codesourcery.com>
 
+	* gdb.mi/mi-break.exp (test_breakpoint_commands): Use
+	mi_send_resuming_command to send -exec-continue.
+
+2010-02-16  Daniel Jacobowitz  <dan@codesourcery.com>
+
 	* gdb.base/list.exp (test_list_filename_and_function): Add test
 	with single quotes.
 	* gdb.cp/overload.cc (intToChar): Rewrite onto one line for easy
